# nlp-generative-chatbot

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  02_seq2seq_basic.ipynb
notebooks/correct-answers-only/: 01_preprocessing.ipynb  02_seq2seq_basic.ipynb  03_model2_luong_attention.ipynb
notebooks/full-dataset/: 01_preprocessing.ipynb  02_seq2seq_basic.ipynb  03_model2_luong_attention.ipynb
